objects/PHSS_Error_Logger__c.object
<CustomObject>
    <fields>
        <fullName>Formatted_Record__c</fullName>
        <label>Formatted Record</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <label>Record</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <label>PHSS Error Logger</label>
    <nameField>
        <displayFormat>Error-{000000000}</displayFormat>
        <label>PHSS Error Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PHSS Error Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>